[add] added header template and css

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header class="header header-user">
+    <nav class="nav">
+        <h2>DSCommerce</h2>
+        <div>
+          <img src="assets/cart.png" alt="cart image" class="small-image">
+          <a routerLink="">Entrar</a>
+        </div>
+    </nav>
+</header>
