[add] added routes in catalog and added catalog template

--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,1 +1,8 @@
-<p>catalog works!</p>
+<main class="main main-catalog">
+    <section class="search-bar"></section>
+    <section class="catalog"></section>
+
+    <button href="#" class="button">
+        <span>carregar mais</span>
+    </button>
+</main>
