--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,9 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+
+.main {
+    margin: 40px auto auto auto;
+    gap: 20px;
+    width: 100%;
+}
