[added] added search in catalog component and catalog main and search  css

--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,5 +1,16 @@
 <main class="main main-catalog">
-    <section class="search-bar"></section>
+    <section class="search-bar">
+        <div class="img-button">
+            <img src="assets/search.png" alt="cart image" class="small-image">
+        </div>
+
+        <input type="text" placeholder="product name">
+           
+        <div class="img-button">
+            <img src="assets/cart.png" alt="cart image" class="small-image">
+        </div>
+    </section>
+
     <section class="catalog"></section>
 
     <button href="#" class="button">
