[add] added productDetails template and css

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -1,1 +1,23 @@
-<p>product-details works!</p>
+<main class="main product-details">
+    <section class="catalog">
+        <div class="product">
+            <img src="assets/1.png" alt="product photo">
+
+            <div class="product-informations">
+                <span class="money">R$ 5000</span>
+                <p class="product-title">Computador Gamer</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, consectetur natus iure officiis eos cum! Saepe autem repellendus illo soluta ducimus, vel, adipisci aliquid at expedita itaque delectus pariatur! Enim!</p>
+
+                <div class='product-types'>
+                    <div class="types"><span>Eletronicos</span></div>
+                    <div class="types"><span>Computadores</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="directions">
+        <button><span>comprar</span></button>
+        <button><span>Inicio</span></button>
+    </section>
+</main>
